// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middleware view proxy should allow if user uid corresponds to the one in url 1`] = `Array []`;

exports[`middleware view proxy should allow uid 0 1`] = `Array []`;

exports[`middleware view proxy should call addMDSKey and addDsid 1`] = `
Array [
  Array [
    Object {
      "mobile": undefined,
      "uid": "0",
    },
  ],
]
`;

exports[`middleware view proxy should call addMDSKey and addDsid 2`] = `
Array [
  Array [
    Object {
      "mobile": undefined,
      "uid": "0",
    },
  ],
]
`;

exports[`middleware view should dispatch save:forceRun if has save-to-disk cookie 1`] = `
Array [
  "view",
  Object {
    "redirect": false,
  },
]
`;

exports[`middleware view should dispatch save:forceRun if has save-to-disk cookie 2`] = `
Array [
  "calls of action updateURL",
  Array [
    Object {
      "*": "some-token",
    },
    "/view/345/",
    "127.0.0.1",
  ],
]
`;

exports[`middleware view should dispatch save:forceRun if has save-to-disk cookie 3`] = `
Array [
  "calls of action updateUser",
  Array [
    Object {
      "auth": true,
      "hasPassword": true,
      "id": 345,
    },
  ],
]
`;

exports[`middleware view should dispatch save:forceRun if has save-to-disk cookie 4`] = `
Array [
  "calls of action updateCfg",
  Array [
    Object {
      "authUrl": undefined,
      "avatarOrigin": "https://avatars.mdst.yandex.net",
      "disk": undefined,
      "dsid": undefined,
      "embed": undefined,
      "experiments": Object {
        "flags": Object {},
        "metrika": "",
      },
      "fullTld": undefined,
      "isCorp": false,
      "isCoverLayer": undefined,
      "isInAppEditor": false,
      "mail": undefined,
      "mail360": undefined,
      "passport": undefined,
      "showOODisabledNotification": false,
      "support": undefined,
      "tld": undefined,
      "ua": Object {},
      "www": undefined,
      "yu": undefined,
    },
  ],
]
`;

exports[`middleware view should dispatch save:forceRun if has save-to-disk cookie 5`] = `
Array [
  "calls of action updateDoc",
  Array [
    Object {
      "archivePath": "",
      "fileUrl": "ya-disk://some-file",
      "isPrivate": false,
      "protocol": "",
      "serpParams": "",
      "timestamp": 1523274528093,
      "title": undefined,
    },
  ],
]
`;

exports[`middleware view should dispatch save:forceRun if has save-to-disk cookie 6`] = `
Array [
  "calls of action updateAction",
  Array [
    "save",
    Object {
      "forceRun": true,
    },
  ],
]
`;

exports[`middleware view should dispatch save:forceRun if has save-to-disk cookie 7`] = `
Array [
  "calls of action updateDirect",
  Array [
    Object {
      "names": undefined,
      "orders": Object {
        "bottom": undefined,
        "top": undefined,
      },
      "tokens": undefined,
    },
  ],
]
`;

exports[`middleware view should return 500 if convert saga is rejected 1`] = `
Array [
  "calls of action updateURL",
  Array [
    Object {},
    "/view/0/",
    "127.0.0.1",
  ],
]
`;

exports[`middleware view should return 500 if convert saga is rejected 2`] = `
Array [
  "calls of action updateUser",
  Array [
    Object {
      "id": 0,
    },
  ],
]
`;

exports[`middleware view should return 500 if convert saga is rejected 3`] = `
Array [
  "calls of action updateCfg",
  Array [
    Object {
      "authUrl": undefined,
      "avatarOrigin": "https://avatars.mdst.yandex.net",
      "disk": undefined,
      "dsid": undefined,
      "embed": undefined,
      "experiments": Object {
        "flags": Object {},
        "metrika": "",
      },
      "fullTld": undefined,
      "isCorp": false,
      "isCoverLayer": undefined,
      "isInAppEditor": false,
      "mail": undefined,
      "mail360": undefined,
      "passport": undefined,
      "showOODisabledNotification": false,
      "support": undefined,
      "tld": undefined,
      "ua": Object {},
      "www": undefined,
      "yu": undefined,
    },
  ],
]
`;

exports[`middleware view should return 500 if convert saga is rejected 4`] = `
Array [
  "calls of action updateDoc",
  Array [
    Object {
      "archivePath": "",
      "fileUrl": "some-url",
      "isPrivate": false,
      "protocol": "",
      "serpParams": "",
      "timestamp": 1523274528093,
      "title": undefined,
    },
  ],
]
`;

exports[`middleware view should return 500 if convert saga is rejected 5`] = `
Array [
  "calls of action updateAction",
]
`;

exports[`middleware view should return 500 if convert saga is rejected 6`] = `
Array [
  "calls of action updateDirect",
  Array [
    Object {
      "names": undefined,
      "orders": Object {
        "bottom": undefined,
        "top": undefined,
      },
      "tokens": undefined,
    },
  ],
]
`;

exports[`middleware view should return 500 if convert saga is rejected 7`] = `
Array [
  Array [
    "error",
    Object {
      "code": 500,
    },
  ],
]
`;

exports[`middleware view should return 500 if convert saga is rejected 8`] = `
Array [
  Array [
    "some-url",
    undefined,
    undefined,
  ],
]
`;

exports[`middleware view should set doc.serpUrl & doc.serpHost for document from SERP 1`] = `
Array [
  Array [
    "view",
    Object {
      "redirect": false,
    },
  ],
]
`;

exports[`middleware view should set doc.serpUrl & doc.serpHost for document from SERP 2`] = `
Array [
  "calls of action updateURL",
  Array [
    Object {
      "*": "some-token",
    },
    "/view/0/",
    "127.0.0.1",
  ],
]
`;

exports[`middleware view should set doc.serpUrl & doc.serpHost for document from SERP 3`] = `
Array [
  "calls of action updateUser",
  Array [
    Object {
      "id": 0,
    },
  ],
]
`;

exports[`middleware view should set doc.serpUrl & doc.serpHost for document from SERP 4`] = `
Array [
  "calls of action updateCfg",
  Array [
    Object {
      "authUrl": undefined,
      "avatarOrigin": "https://avatars.mdst.yandex.net",
      "disk": undefined,
      "dsid": undefined,
      "embed": undefined,
      "experiments": Object {
        "flags": Object {},
        "metrika": "",
      },
      "fullTld": undefined,
      "isCorp": false,
      "isCoverLayer": undefined,
      "isInAppEditor": false,
      "mail": undefined,
      "mail360": undefined,
      "passport": undefined,
      "showOODisabledNotification": false,
      "support": undefined,
      "tld": undefined,
      "ua": Object {},
      "www": undefined,
      "yu": 987654321,
    },
  ],
]
`;

exports[`middleware view should set doc.serpUrl & doc.serpHost for document from SERP 5`] = `
Array [
  "calls of action updateDoc",
  Array [
    Object {
      "archivePath": "",
      "fileUrl": "some-url",
      "isPrivate": false,
      "protocol": "ya-serps:",
      "serpHost": "host",
      "serpParams": "",
      "serpUrl": "clck?url=https://host/path?search&yandexuid=987654321",
      "timestamp": 1523274528093,
      "title": undefined,
    },
  ],
]
`;

exports[`middleware view should set doc.serpUrl & doc.serpHost for document from SERP 6`] = `
Array [
  "calls of action updateAction",
]
`;

exports[`middleware view should set doc.serpUrl & doc.serpHost for document from SERP 7`] = `
Array [
  "calls of action updateDirect",
  Array [
    Object {
      "names": undefined,
      "orders": Object {
        "bottom": undefined,
        "top": undefined,
      },
      "tokens": undefined,
    },
  ],
]
`;

exports[`middleware view should sync uids if uid in params and token do not match 1`] = `
Array [
  "calls of action updateURL",
  Array [
    Object {
      "*": "some-token-for-1",
    },
    "/view/1/",
    "127.0.0.1",
  ],
]
`;

exports[`middleware view should sync uids if uid in params and token do not match 2`] = `
Array [
  "calls of action updateUser",
  Array [
    Object {
      "id": 0,
    },
  ],
]
`;

exports[`middleware view should sync uids if uid in params and token do not match 3`] = `
Array [
  "calls of action updateCfg",
  Array [
    Object {
      "authUrl": undefined,
      "avatarOrigin": "https://avatars.mdst.yandex.net",
      "disk": undefined,
      "dsid": undefined,
      "embed": undefined,
      "experiments": Object {
        "flags": Object {},
        "metrika": "",
      },
      "fullTld": undefined,
      "isCorp": false,
      "isCoverLayer": undefined,
      "isInAppEditor": false,
      "mail": undefined,
      "mail360": undefined,
      "passport": undefined,
      "showOODisabledNotification": false,
      "support": undefined,
      "tld": undefined,
      "ua": Object {},
      "www": undefined,
      "yu": undefined,
    },
  ],
]
`;

exports[`middleware view should sync uids if uid in params and token do not match 4`] = `
Array [
  "calls of action updateDoc",
  Array [
    Object {
      "archivePath": "",
      "fileUrl": "some-url",
      "isPrivate": false,
      "protocol": "",
      "serpParams": "",
      "timestamp": 1523274528093,
      "title": undefined,
    },
  ],
]
`;

exports[`middleware view should sync uids if uid in params and token do not match 5`] = `
Array [
  "calls of action updateAction",
]
`;

exports[`middleware view should sync uids if uid in params and token do not match 6`] = `
Array [
  "calls of action updateDirect",
  Array [
    Object {
      "names": undefined,
      "orders": Object {
        "bottom": undefined,
        "top": undefined,
      },
      "tokens": undefined,
    },
  ],
]
`;

exports[`middleware view should sync uids if uid in params and token do not match 7`] = `
Array [
  Array [
    "view",
    Object {
      "redirect": Object {
        "pathname": "/view/1/",
        "query": Object {
          "*": "some-token-for-1",
        },
      },
    },
  ],
]
`;

exports[`middleware view should sync uids if uid in params and token do not match 8`] = `
Array [
  Array [
    "yet-another-url",
    undefined,
    undefined,
  ],
]
`;
